@@ -684,10 +684,10 @@ _getRegName (const struct reg_info *reg)
 }
 
 static bool
-_hasNativeMulFor (iCode * ic, sym_link * left, sym_link * right)
+_hasNativeMulFor (iCode *ic, sym_link *left, sym_link *right)
 {
   sym_link *test = NULL;
-  int result_size = IS_SYMOP(IC_RESULT(ic)) ? getSize(OP_SYM_TYPE(IC_RESULT(ic))) : 4;
+  int result_size = IS_SYMOP (IC_RESULT(ic)) ? getSize (OP_SYM_TYPE (IC_RESULT(ic))) : 4;
 
   if (ic->op != '*')
     {
