@@ -1,5 +1,12 @@
 2013-04-30 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/stm8/gen.c,
+	  src/stm8/main.c,
+	  src/stm8/ralloc2.cc:
+	  STM8: Implement unsigned division.
+
+2013-04-30 Philipp Klaus Krause <pkk AT spth.de>
+
 	* support/regression/tests/bp.c,
 	  support/regression/tests/bug2094505.c,
 	  support/regression/tests/bug3475630.c,
